--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,18 +1,27 @@
 [versions]
 # libraries
 junit = "4.13.2"
-opentest4j = "1.3.0"
+lombok = "1.18.24"
+hutool = "5.8.25"
+retrofit2 = "2.9.0"
+converter-gson = "2.9.0"
+flexmark = "0.62.2"
 
 # plugins
 changelog = "2.2.1"
-intelliJPlatform = "2.5.0"
-kotlin = "2.1.20"
-kover = "0.9.1"
-qodana = "2024.3.4"
+intelliJPlatform = "2.0.1"
+kotlin = "2.0.20"
+kover = "0.8.3"
+qodana = "2024.1.9"
+#foojay-resolver-convention = "0.8.0"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
-opentest4j = { group = "org.opentest4j", name = "opentest4j", version.ref = "opentest4j" }
+lombok = { group = "org.projectlombok", name = "lombok", version.ref = "lombok" }
+hutool = { group = "cn.hutool", name = "hutool-core", version.ref = "hutool" }
+retrofit2 = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit2" }
+converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "converter-gson" }
+flexmark = { group = "com.vladsch.flexmark", name = "flexmark", version.ref = "flexmark" }
 
 [plugins]
 changelog = { id = "org.jetbrains.changelog", version.ref = "changelog" }
@@ -20,3 +29,4 @@ intelliJPlatform = { id = "org.jetbrains.intellij.platform", version.ref = "inte
 kotlin = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
 qodana = { id = "org.jetbrains.qodana", version.ref = "qodana" }
+#foojay-resolver-convention = { id = "org.gradle.toolchains.foojay-resolver-convention", version = "foojay-resolver-convention" }
